--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "^2.5.8",
     "express": "^4.16.3",
     "express-ejs-layouts": "^2.4.0",
+    "mongoose": "^5.0.13",
     "nodemon": "^1.17.3"
   }
 }
